--- a/amplify/backend/function/listupPostAuthentication/Pipfile
+++ b/amplify/backend/function/listupPostAuthentication/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 src = {editable = true, path = "./src"}
 pymysql = "*"
+setuptools = "*"
 
 [requires]
 python_version = "3.8"
